--- a/travelling v winning.ipynb
+++ b/travelling v winning.ipynb
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "      <td>1300.371469</td>\n",
        "      <td>2334</td>\n",
        "      <td>2338</td>\n",
-       "      <td>2334.0</td>\n",
+       "      <td>0.409546</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -432,7 +432,7 @@
        "      <td>2667.374569</td>\n",
        "      <td>1163</td>\n",
        "      <td>1190</td>\n",
-       "      <td>1163.0</td>\n",
+       "      <td>0.400758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -441,7 +441,7 @@
        "      <td>3945.589980</td>\n",
        "      <td>610</td>\n",
        "      <td>622</td>\n",
-       "      <td>610.0</td>\n",
+       "      <td>0.402109</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -450,7 +450,7 @@
        "      <td>5204.464010</td>\n",
        "      <td>313</td>\n",
        "      <td>319</td>\n",
-       "      <td>313.0</td>\n",
+       "      <td>0.402314</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -459,7 +459,7 @@
        "      <td>6247.044444</td>\n",
        "      <td>161</td>\n",
        "      <td>147</td>\n",
-       "      <td>161.0</td>\n",
+       "      <td>0.447222</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -468,7 +468,7 @@
        "      <td>7342.411765</td>\n",
        "      <td>68</td>\n",
        "      <td>62</td>\n",
-       "      <td>68.0</td>\n",
+       "      <td>0.444444</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -477,7 +477,7 @@
        "      <td>8497.160714</td>\n",
        "      <td>24</td>\n",
        "      <td>22</td>\n",
-       "      <td>24.0</td>\n",
+       "      <td>0.428571</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -486,7 +486,7 @@
        "      <td>9692.956522</td>\n",
        "      <td>11</td>\n",
        "      <td>9</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>0.478261</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -495,7 +495,7 @@
        "      <td>10707.125000</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>0.375000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -504,7 +504,7 @@
        "      <td>10115.000000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -523,17 +523,17 @@
        "8            8                      9          10707.125000          3   \n",
        "9            1                     10          10115.000000          0   \n",
        "\n",
-       "   expected games won   win %  \n",
-       "0                2338  2334.0  \n",
-       "1                1190  1163.0  \n",
-       "2                 622   610.0  \n",
-       "3                 319   313.0  \n",
-       "4                 147   161.0  \n",
-       "5                  62    68.0  \n",
-       "6                  22    24.0  \n",
-       "7                   9    11.0  \n",
-       "8                   3     3.0  \n",
-       "9                   0     0.0  "
+       "   expected games won     win %  \n",
+       "0                2338  0.409546  \n",
+       "1                1190  0.400758  \n",
+       "2                 622  0.402109  \n",
+       "3                 319  0.402314  \n",
+       "4                 147  0.447222  \n",
+       "5                  62  0.444444  \n",
+       "6                  22  0.428571  \n",
+       "7                   9  0.478261  \n",
+       "8                   3  0.375000  \n",
+       "9                   0  0.000000  "
       ]
      },
      "metadata": {},
@@ -558,7 +558,7 @@
     "    data = complete_data[complete_data['n_game_road_trip'] == i]\n",
     "    games_won = int(data['win?'].sum()) \n",
     "    size = data.shape[0] \n",
-    "    winpercentage = games_won / i_size\n",
+    "    winpercentage = games_won / size\n",
     "    mean_traveldist = data[\"cumulative_distance\"].mean()\n",
     "    data_dict[\"sample size\"].append(size)\n",
     "    data_dict[\"win %\"].append(winpercentage)\n",
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
        "0.03039729368480515"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
