--- a/analysis and visualizations.ipynb
+++ b/analysis and visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -226,14 +226,14 @@
      "output_type": "stream",
      "text": [
       "sample size for different values of n, where n is the length of a road trip\n",
-      "n = 1: 5699\n",
-      "n = 2: 2902\n",
-      "n = 3: 1517\n",
-      "n = 4: 778\n",
-      "n = 5: 360\n",
-      "n = 6: 153\n",
-      "n = 7: 56\n",
-      "n = 8: 23\n",
+      "n = 1: 5965\n",
+      "n = 2: 3039\n",
+      "n = 3: 1581\n",
+      "n = 4: 814\n",
+      "n = 5: 372\n",
+      "n = 6: 157\n",
+      "n = 7: 58\n",
+      "n = 8: 25\n",
       "n = 9: 8\n",
       "n = 10: 1\n"
      ]
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -286,75 +286,75 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5699</td>\n",
+       "      <td>5965</td>\n",
        "      <td>1</td>\n",
-       "      <td>1300.371469</td>\n",
-       "      <td>2334</td>\n",
-       "      <td>2338</td>\n",
-       "      <td>0.409546</td>\n",
+       "      <td>1298.250293</td>\n",
+       "      <td>2461</td>\n",
+       "      <td>2448</td>\n",
+       "      <td>0.412573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2902</td>\n",
+       "      <td>3039</td>\n",
        "      <td>2</td>\n",
-       "      <td>2667.374569</td>\n",
-       "      <td>1163</td>\n",
-       "      <td>1190</td>\n",
-       "      <td>0.400758</td>\n",
+       "      <td>2666.405067</td>\n",
+       "      <td>1231</td>\n",
+       "      <td>1247</td>\n",
+       "      <td>0.405067</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1517</td>\n",
+       "      <td>1581</td>\n",
        "      <td>3</td>\n",
-       "      <td>3945.589980</td>\n",
-       "      <td>610</td>\n",
-       "      <td>622</td>\n",
-       "      <td>0.402109</td>\n",
+       "      <td>3947.884250</td>\n",
+       "      <td>637</td>\n",
+       "      <td>648</td>\n",
+       "      <td>0.402910</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>778</td>\n",
+       "      <td>814</td>\n",
        "      <td>4</td>\n",
-       "      <td>5204.464010</td>\n",
-       "      <td>313</td>\n",
-       "      <td>319</td>\n",
-       "      <td>0.402314</td>\n",
+       "      <td>5218.847666</td>\n",
+       "      <td>327</td>\n",
+       "      <td>334</td>\n",
+       "      <td>0.401720</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>360</td>\n",
+       "      <td>372</td>\n",
        "      <td>5</td>\n",
-       "      <td>6247.044444</td>\n",
-       "      <td>161</td>\n",
-       "      <td>147</td>\n",
-       "      <td>0.447222</td>\n",
+       "      <td>6243.266129</td>\n",
+       "      <td>166</td>\n",
+       "      <td>152</td>\n",
+       "      <td>0.446237</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>153</td>\n",
+       "      <td>157</td>\n",
        "      <td>6</td>\n",
-       "      <td>7342.411765</td>\n",
-       "      <td>68</td>\n",
-       "      <td>62</td>\n",
-       "      <td>0.444444</td>\n",
+       "      <td>7337.318471</td>\n",
+       "      <td>70</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0.445860</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>56</td>\n",
+       "      <td>58</td>\n",
        "      <td>7</td>\n",
-       "      <td>8497.160714</td>\n",
-       "      <td>24</td>\n",
-       "      <td>22</td>\n",
-       "      <td>0.428571</td>\n",
+       "      <td>8445.948276</td>\n",
+       "      <td>26</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0.448276</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>23</td>\n",
+       "      <td>25</td>\n",
        "      <td>8</td>\n",
-       "      <td>9692.956522</td>\n",
+       "      <td>9589.600000</td>\n",
        "      <td>11</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0.478261</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.440000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -380,26 +380,26 @@
       ],
       "text/plain": [
        "   sample size  nth game of road trip  mean travel distance  games won  \\\n",
-       "0         5699                      1           1300.371469       2334   \n",
-       "1         2902                      2           2667.374569       1163   \n",
-       "2         1517                      3           3945.589980        610   \n",
-       "3          778                      4           5204.464010        313   \n",
-       "4          360                      5           6247.044444        161   \n",
-       "5          153                      6           7342.411765         68   \n",
-       "6           56                      7           8497.160714         24   \n",
-       "7           23                      8           9692.956522         11   \n",
+       "0         5965                      1           1298.250293       2461   \n",
+       "1         3039                      2           2666.405067       1231   \n",
+       "2         1581                      3           3947.884250        637   \n",
+       "3          814                      4           5218.847666        327   \n",
+       "4          372                      5           6243.266129        166   \n",
+       "5          157                      6           7337.318471         70   \n",
+       "6           58                      7           8445.948276         26   \n",
+       "7           25                      8           9589.600000         11   \n",
        "8            8                      9          10707.125000          3   \n",
        "9            1                     10          10115.000000          0   \n",
        "\n",
        "   expected games won     win %  \n",
-       "0                2338  0.409546  \n",
-       "1                1190  0.400758  \n",
-       "2                 622  0.402109  \n",
-       "3                 319  0.402314  \n",
-       "4                 147  0.447222  \n",
-       "5                  62  0.444444  \n",
-       "6                  22  0.428571  \n",
-       "7                   9  0.478261  \n",
+       "0                2448  0.412573  \n",
+       "1                1247  0.405067  \n",
+       "2                 648  0.402910  \n",
+       "3                 334  0.401720  \n",
+       "4                 152  0.446237  \n",
+       "5                  64  0.445860  \n",
+       "6                  23  0.448276  \n",
+       "7                  10  0.440000  \n",
        "8                   3  0.375000  \n",
        "9                   0  0.000000  "
       ]
@@ -441,15 +441,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2334, 1163, 610, 313, 161, 68, 38] [2338, 1190, 622, 319, 147, 62, 34]\n",
-      "Power_divergenceResult(statistic=3.348379146475928, pvalue=0.7640205652076703)\n"
+      "[2461, 1231, 637, 327, 166, 70, 40] [2448, 1247, 648, 334, 152, 64, 36]\n",
+      "Power_divergenceResult(statistic=2.904181760741431, pvalue=0.8207734226301346)\n"
      ]
     }
    ],
@@ -481,32 +481,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy.stats as st\n",
-    "\n",
     "def diff_of_proportions_test(y1, n1, y2, n2): \n",
     "    p1, p2 = y1 / n1, y2 / n2 \n",
     "    p0 = (y1 + y2) / (n1 + n2)\n",
     "    z_obs = (p1 - p2) / ((p0 * (1 - p0) * (1/n1 + 1/n2)) ** .5) \n",
-    "    return 1 - st.norm.cdf(z_obs) \n",
+    "    return z_obs\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.03039729368480515"
+       "1.7754581981092479"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,8 +516,8 @@
     "p2_wins = wins_vs_roadtrip[wins_vs_roadtrip['nth game of road trip'] > 4]['games won'].sum()\n",
     "p2_games = wins_vs_roadtrip[wins_vs_roadtrip['nth game of road trip'] > 4]['sample size'].sum()\n",
     "\n",
-    "p_value = diff_of_proportions_test(p2_wins, p2_games, p1_wins, p1_games)\n",
-    "p_value"
+    "z_value = diff_of_proportions_test(p2_wins, p2_games, p1_wins, p1_games)\n",
+    "z_value"
    ]
   },
   {
