Im fairly certain that my difference of two proportions analysis is correct now. Added some more explanation.

--- a/analysis and visualizations.ipynb
+++ b/analysis and visualizations.ipynb
@@ -476,37 +476,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the eye test, there seems to be a potentially significant jump in win % when a team is on their 5th or greater game of a road trip. Let's see if that is true using a difference of proportions test, with the two proportions being the wins during the nth game of the road trip for 1 <= n <= 4, and the wins for 5 <= n <= 10. "
+    "From the eye test, there seems to be a potentially significant jump in win % when a team is on their 5th or greater game of a road trip. Let's see if that is true using a difference of proportions test, with the two proportions being the wins during the nth game of the road trip for 1 <= n <= 4, and the wins for 5 <= n <= 10. \n",
+    "\n",
+    "Our null hypothesis will be that there is no difference in winning percentage for 1 <= n <= 4 and for 5 <= n <= 10. Our alternative hypothesis is that there is a difference. Through the following test, we will see if we have enough evidence to reject the null hypothesis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np \n",
+    "\n",
     "def diff_of_proportions_test(y1, n1, y2, n2): \n",
     "    p1, p2 = y1 / n1, y2 / n2 \n",
     "    p0 = (y1 + y2) / (n1 + n2)\n",
-    "    z_obs = (p1 - p2) / ((p0 * (1 - p0) * (1/n1 + 1/n2)) ** .5) \n",
+    "    z_obs = (p1 - p2) / np.sqrt((p0 * (1 - p0) * (1/n1 + 1/n2))) \n",
     "    return z_obs\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1.7754581981092479"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z_value = 1.7754581981092479\n"
+     ]
     }
    ],
    "source": [
@@ -517,14 +518,14 @@
     "p2_games = wins_vs_roadtrip[wins_vs_roadtrip['nth game of road trip'] > 4]['sample size'].sum()\n",
     "\n",
     "z_value = diff_of_proportions_test(p2_wins, p2_games, p1_wins, p1_games)\n",
-    "z_value"
+    "print('z_value =', z_value)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That p value means that there is only a 3% chance that the discrepancy in the two proportions occured by random chance! This means, fairly definitively, that after the 4th game of a road trip teams are more likely to win. "
+    "This z-value means that there is greater than a 90% chance that these results are significant and do not represent random chance!  "
    ]
   },
   {
@@ -545,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
