got rid of some analysis in the collecting and sorting section, standardized to single quotes

--- a/analysis and visualizations.ipynb
+++ b/analysis and visualizations.ipynb
@@ -23,181 +23,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allgames = [pd.read_csv(\"./Games/allgames%s.csv\" % (year)) for year in range(START_YEAR, END_YEAR)]"
+    "allgames = [pd.read_csv('./Games/allgames%s.csv' % (year)) for year in range(START_YEAR, END_YEAR)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>start_time</th>\n",
-       "      <th>away_team</th>\n",
-       "      <th>away_team_score</th>\n",
-       "      <th>home_team</th>\n",
-       "      <th>home_team_score</th>\n",
-       "      <th>home_team_win?</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2009-10-27 23:30:00+00:00</td>\n",
-       "      <td>BOSTON CELTICS</td>\n",
-       "      <td>95</td>\n",
-       "      <td>CLEVELAND CAVALIERS</td>\n",
-       "      <td>89</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2009-10-28 00:30:00+00:00</td>\n",
-       "      <td>WASHINGTON WIZARDS</td>\n",
-       "      <td>102</td>\n",
-       "      <td>DALLAS MAVERICKS</td>\n",
-       "      <td>91</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2009-10-28 02:00:00+00:00</td>\n",
-       "      <td>HOUSTON ROCKETS</td>\n",
-       "      <td>87</td>\n",
-       "      <td>PORTLAND TRAIL BLAZERS</td>\n",
-       "      <td>96</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2009-10-28 02:30:00+00:00</td>\n",
-       "      <td>LOS ANGELES CLIPPERS</td>\n",
-       "      <td>92</td>\n",
-       "      <td>LOS ANGELES LAKERS</td>\n",
-       "      <td>99</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2009-10-28 23:00:00+00:00</td>\n",
-       "      <td>INDIANA PACERS</td>\n",
-       "      <td>109</td>\n",
-       "      <td>ATLANTA HAWKS</td>\n",
-       "      <td>120</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1225</th>\n",
-       "      <td>2010-04-15 00:00:00+00:00</td>\n",
-       "      <td>NEW YORK KNICKS</td>\n",
-       "      <td>113</td>\n",
-       "      <td>TORONTO RAPTORS</td>\n",
-       "      <td>131</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1226</th>\n",
-       "      <td>2010-04-15 00:00:00+00:00</td>\n",
-       "      <td>INDIANA PACERS</td>\n",
-       "      <td>97</td>\n",
-       "      <td>WASHINGTON WIZARDS</td>\n",
-       "      <td>98</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1227</th>\n",
-       "      <td>2010-04-15 02:30:00+00:00</td>\n",
-       "      <td>LOS ANGELES LAKERS</td>\n",
-       "      <td>91</td>\n",
-       "      <td>LOS ANGELES CLIPPERS</td>\n",
-       "      <td>107</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1228</th>\n",
-       "      <td>2010-04-15 02:30:00+00:00</td>\n",
-       "      <td>GOLDEN STATE WARRIORS</td>\n",
-       "      <td>122</td>\n",
-       "      <td>PORTLAND TRAIL BLAZERS</td>\n",
-       "      <td>116</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1229</th>\n",
-       "      <td>2010-04-15 02:30:00+00:00</td>\n",
-       "      <td>PHOENIX SUNS</td>\n",
-       "      <td>100</td>\n",
-       "      <td>UTAH JAZZ</td>\n",
-       "      <td>86</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1230 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     start_time              away_team  away_team_score  \\\n",
-       "0     2009-10-27 23:30:00+00:00         BOSTON CELTICS               95   \n",
-       "1     2009-10-28 00:30:00+00:00     WASHINGTON WIZARDS              102   \n",
-       "2     2009-10-28 02:00:00+00:00        HOUSTON ROCKETS               87   \n",
-       "3     2009-10-28 02:30:00+00:00   LOS ANGELES CLIPPERS               92   \n",
-       "4     2009-10-28 23:00:00+00:00         INDIANA PACERS              109   \n",
-       "...                         ...                    ...              ...   \n",
-       "1225  2010-04-15 00:00:00+00:00        NEW YORK KNICKS              113   \n",
-       "1226  2010-04-15 00:00:00+00:00         INDIANA PACERS               97   \n",
-       "1227  2010-04-15 02:30:00+00:00     LOS ANGELES LAKERS               91   \n",
-       "1228  2010-04-15 02:30:00+00:00  GOLDEN STATE WARRIORS              122   \n",
-       "1229  2010-04-15 02:30:00+00:00           PHOENIX SUNS              100   \n",
-       "\n",
-       "                   home_team  home_team_score  home_team_win?  \n",
-       "0        CLEVELAND CAVALIERS               89           False  \n",
-       "1           DALLAS MAVERICKS               91           False  \n",
-       "2     PORTLAND TRAIL BLAZERS               96            True  \n",
-       "3         LOS ANGELES LAKERS               99            True  \n",
-       "4              ATLANTA HAWKS              120            True  \n",
-       "...                      ...              ...             ...  \n",
-       "1225         TORONTO RAPTORS              131            True  \n",
-       "1226      WASHINGTON WIZARDS               98            True  \n",
-       "1227    LOS ANGELES CLIPPERS              107            True  \n",
-       "1228  PORTLAND TRAIL BLAZERS              116           False  \n",
-       "1229               UTAH JAZZ               86           False  \n",
-       "\n",
-       "[1230 rows x 6 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -208,8 +41,7 @@
    ],
    "source": [
     "# what is the home team win % over these 10 regular seasons? \n",
-    "display(allgames[0])\n",
-    "num_home_wins = sum([game[\"home_team_win?\"].sum() for game in allgames]) \n",
+    "num_home_wins = sum([game['home_team_win?'].sum() for game in allgames]) \n",
     "num_games = sum([game.shape[0] for game in allgames])\n",
     "\n",
     "home_win_percentage = num_home_wins / num_games \n",
@@ -242,11 +74,11 @@
    "source": [
     "# Explore sample size for each road trip length for different values of n \n",
     "\n",
-    "complete_data = pd.read_csv(\"CompleteData/completedata.csv\")\n",
+    "complete_data = pd.read_csv('CompleteData/completedata.csv')\n",
     "\n",
-    "print(\"sample size for different values of n, where n is the length of a road trip\")\n",
+    "print('sample size for different values of n, where n is the length of a road trip')\n",
     "for i in range(1, 11):\n",
-    "    print(\"n = %s:\" % str(i), complete_data[complete_data['n_game_road_trip'] == i].shape[0])"
+    "    print('n = %s:' % str(i), complete_data[complete_data['n_game_road_trip'] == i].shape[0])"
    ]
   },
   {
@@ -414,25 +246,25 @@
     "AWAY_WIN_PERCENTAGE = 1 - home_win_percentage \n",
     "\n",
     "data_dict = {\n",
-    "    \"sample size\": [],\n",
-    "    \"nth game of road trip\": [],\n",
-    "    \"mean travel distance\" : [],\n",
-    "    \"games won\" : [], \n",
-    "    \"expected games won\" : [], # if winning is independent of the length of road trip, how many games should be won? \n",
-    "    \"win %\" : []\n",
+    "    'sample size': [],\n",
+    "    'nth game of road trip': [],\n",
+    "    'mean travel distance' : [],\n",
+    "    'games won' : [], \n",
+    "    'expected games won' : [], # if winning is independent of the length of road trip, how many games should be won? \n",
+    "    'win %' : []\n",
     "}\n",
     "for i in range(1, 11): \n",
     "    data = complete_data[complete_data['n_game_road_trip'] == i]\n",
     "    games_won = int(data['win?'].sum()) \n",
     "    size = data.shape[0] \n",
     "    winpercentage = games_won / size\n",
-    "    mean_traveldist = data[\"cumulative_distance\"].mean()\n",
-    "    data_dict[\"sample size\"].append(size)\n",
-    "    data_dict[\"win %\"].append(winpercentage)\n",
-    "    data_dict[\"nth game of road trip\"].append(i) \n",
-    "    data_dict[\"mean travel distance\"].append(mean_traveldist)\n",
-    "    data_dict[\"games won\"].append(games_won) \n",
-    "    data_dict[\"expected games won\"].append(int(size * AWAY_WIN_PERCENTAGE))\n",
+    "    mean_traveldist = data['cumulative_distance'].mean()\n",
+    "    data_dict['sample size'].append(size)\n",
+    "    data_dict['win %'].append(winpercentage)\n",
+    "    data_dict['nth game of road trip'].append(i) \n",
+    "    data_dict['mean travel distance'].append(mean_traveldist)\n",
+    "    data_dict['games won'].append(games_won) \n",
+    "    data_dict['expected games won'].append(int(size * AWAY_WIN_PERCENTAGE))\n",
     "\n",
     "wins_vs_roadtrip = pd.DataFrame.from_dict(data_dict) \n",
     "    \n",
@@ -564,20 +396,20 @@
     "for year in range(START_YEAR, END_YEAR):\n",
     "    for team, city in team_cities.items(): \n",
     "        \n",
-    "        file = \"%s%s.csv\" % (team, year) \n",
+    "        file = '%s%s.csv' % (team, year) \n",
     "        try:\n",
     "            team_season = pd.read_csv('TeamTravelDistVsWinning/%s' % file)\n",
     "        except FileNotFoundError: # not every team, city combination is a valid team \n",
     "            continue \n",
     "        \n",
-    "        if team_season[team_season[\"n_game_road_trip\"] == 10].shape[0] != 0:\n",
+    "        if team_season[team_season['n_game_road_trip'] == 10].shape[0] != 0:\n",
     "            team_longest_road_trip = (team, year) \n",
-    "        if team_season[team_season[\"cumulative_distance\"] == 13039].shape[0] != 0: \n",
+    "        if team_season[team_season['cumulative_distance'] == 13039].shape[0] != 0: \n",
     "            team_longest_dist = (team, year)\n",
     "            \n",
     "\n",
-    "print(\"Longest Distance Traveled: %s\" % str(team_longest_dist))            \n",
-    "print(\"Longest Road Trip: %s\" % str(team_longest_road_trip))"
+    "print('Longest Distance Traveled: %s' % str(team_longest_dist))            \n",
+    "print('Longest Road Trip: %s' % str(team_longest_road_trip))"
    ]
   },
   {
@@ -629,7 +461,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "sns.lmplot(x = \"n_game_road_trip\", y = \"cumulative_distance\", data = complete_data)\n"
+    "sns.lmplot(x = 'n_game_road_trip', y = 'cumulative_distance', data = complete_data)\n"
    ]
   },
   {
@@ -661,7 +493,7 @@
     }
    ],
    "source": [
-    "sns.lmplot(x = \"cumulative_distance\", y = \"win?\", data = complete_data)"
+    "sns.lmplot(x = 'cumulative_distance', y = 'win?', data = complete_data)"
    ]
   }
  ],
