--- a/collecting and sorting data.ipynb
+++ b/collecting and sorting data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,41 +52,19 @@
     "}\n",
     "\n",
     "# create a list containing a dataframe for each season being studied, and cut off the post season \n",
-    "allgames = [pd.read_csv(\"./Games/allgames%s.csv\" % (year)).iloc[range(0, 1230), :] if year not in shortened_years \n",
-    "            else pd.read_csv(\"./Games/allgames%s.csv\" % (year)).iloc[range(0, shortened_years[year]), :]  \n",
+    "allgames = [pd.read_csv('./Games/allgames%s.csv' % (year)).iloc[range(0, 1230), :] if year not in shortened_years \n",
+    "            else pd.read_csv('./Games/allgames%s.csv' % (year)).iloc[range(0, shortened_years[year]), :]  \n",
     "            for year in range(START_YEAR, END_YEAR)]\n",
     "\n",
     "# add column for home win\n",
     "for game in allgames: \n",
-    "    game[\"home_team_win?\"] = game[\"home_team_score\"] > game[\"away_team_score\"]\n",
+    "    game['home_team_win?'] = game['home_team_score'] > game['away_team_score']\n",
     "\n",
     "# re-save the dataframes, but with only the reg season and the home_team_win? column \n",
     "for year in range(START_YEAR, END_YEAR): \n",
     "    game = allgames[year - START_YEAR]\n",
     "    path = './Games/allgames%s.csv' % str(year)\n",
     "    game.to_csv(path, index = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5896011277883738\n"
-     ]
-    }
-   ],
-   "source": [
-    "# what is the home team win % over these 10 regular seasons? \n",
-    "num_home_wins = sum([game[\"home_team_win?\"].sum() for game in allgames]) \n",
-    "num_games = sum([game.shape[0] for game in allgames])\n",
-    "\n",
-    "home_win_percentage = num_home_wins / num_games \n",
-    "print(home_win_percentage)"
    ]
   },
   {
@@ -116,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,14 +115,14 @@
     "        num_games = 82 if year != 2012 else 66 # only 66 games were played in the 2011-12 season\n",
     "        \n",
     "        if self.year == 2013:\n",
-    "            if self.team == \"BOSTON CELTICS\" or self.team == \"INDIANA PACERS\": # 1 game cancelled bc of boston marathon bombing  \n",
+    "            if self.team == 'BOSTON CELTICS' or self.team == 'INDIANA PACERS': # 1 game cancelled bc of boston marathon bombing  \n",
     "                num_games = 81 \n",
     "        \n",
     "        #  As we iterate through the season's games, we will maintain this table for each team \n",
     "        self.table = {\n",
-    "            \"cumulative_distance\" : [0 for i in range(num_games)], \n",
-    "            \"n_game_road_trip\" : [0 for i in range(num_games)], \n",
-    "            \"win?\" : [None for i in range(num_games)]\n",
+    "            'cumulative_distance' : [0 for i in range(num_games)], \n",
+    "            'n_game_road_trip' : [0 for i in range(num_games)], \n",
+    "            'win?' : [None for i in range(num_games)]\n",
     "        }\n",
     "        \n",
     "        # The teams dictionary will store a team for every (year, team) combination\n",
@@ -153,20 +131,20 @@
     "    \n",
     "    def add_game(self, home_team, h_pnts, v_pnts):\n",
     "        if  self.home_city != team_cities[home_team]: \n",
-    "            cities = \"stops=%s|%s\" % (self.curr_city, team_cities[home_team])\n",
-    "            ep = \"https://www.distance24.org/route.json?%s\" % cities\n",
-    "            dist = requests.get(ep).json()[\"distance\"]\n",
-    "            prev_road_count = self.table[\"n_game_road_trip\"][self.games_played - 1]\n",
-    "            prev_cumulative_dist = self.table[\"cumulative_distance\"][self.games_played - 1]\n",
-    "            self.table[\"n_game_road_trip\"][self.games_played] = prev_road_count + 1 \n",
-    "            self.table[\"cumulative_distance\"][self.games_played] = prev_cumulative_dist + dist \n",
+    "            cities = 'stops=%s|%s' % (self.curr_city, team_cities[home_team])\n",
+    "            ep = 'https://www.distance24.org/route.json?%s' % cities\n",
+    "            dist = requests.get(ep).json()['distance']\n",
+    "            prev_road_count = self.table['n_game_road_trip'][self.games_played - 1]\n",
+    "            prev_cumulative_dist = self.table['cumulative_distance'][self.games_played - 1]\n",
+    "            self.table['n_game_road_trip'][self.games_played] = prev_road_count + 1 \n",
+    "            self.table['cumulative_distance'][self.games_played] = prev_cumulative_dist + dist \n",
     "        else: \n",
-    "            self.table[\"n_game_road_trip\"][self.games_played] = 0 \n",
-    "            self.table[\"cumulative_distance\"][self.games_played] = 0 \n",
+    "            self.table['n_game_road_trip'][self.games_played] = 0 \n",
+    "            self.table['cumulative_distance'][self.games_played] = 0 \n",
     "        if self.team == home_team: \n",
-    "            self.table[\"win?\"][self.games_played] = 1 if h_pnts > v_pnts else 0 \n",
+    "            self.table['win?'][self.games_played] = 1 if h_pnts > v_pnts else 0 \n",
     "        else: \n",
-    "            self.table[\"win?\"][self.games_played] = 0 if h_pnts > v_pnts else 1 \n",
+    "            self.table['win?'][self.games_played] = 0 if h_pnts > v_pnts else 1 \n",
     "        self.valid = True # if this method is accessed, it means that this team is \"valid\" \n",
     "        self.games_played += 1  \n",
     "        self.curr_city = team_cities[home_team] \n",
@@ -204,21 +182,21 @@
     "for year in range(START_YEAR, END_YEAR): \n",
     "    print(str((year - START_YEAR) / (END_YEAR - START_YEAR) * 100) + '% done')\n",
     "    for row in allgames[year - START_YEAR].iterrows():\n",
-    "        visitor = row[1].loc[\"away_team\"]\n",
-    "        home_team = row[1].loc[\"home_team\"] \n",
-    "        h_pnts = row[1].loc[\"home_team_score\"] \n",
-    "        v_pnts = row[1].loc[\"away_team_score\"]\n",
+    "        visitor = row[1].loc['away_team']\n",
+    "        home_team = row[1].loc['home_team'] \n",
+    "        h_pnts = row[1].loc['home_team_score'] \n",
+    "        v_pnts = row[1].loc['away_team_score']\n",
     "        teams[(visitor, year)].add_game(home_team, h_pnts, v_pnts) \n",
     "        teams[(home_team, year)].add_game(home_team, h_pnts, v_pnts) \n",
     "\n",
-    "print(\"100% done\")\n",
+    "print('100% done')\n",
     "        \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -228,14 +206,14 @@
     "dfs = {(team, year):pd.DataFrame.from_dict(data.table) for (team, year), data in teams.items() \n",
     "       if data.valid}\n",
     "for (team, year), df in dfs.items(): \n",
-    "    name = \"%s%s.csv\" % (team, year)\n",
+    "    name = '%s%s.csv' % (team, year)\n",
     "    path = 'TeamTravelDistVsWinning/%s' % name\n",
     "    df.to_csv(path, index = False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +230,7 @@
        "Name: cumulative_distance, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +241,7 @@
     "team_travel_data = []\n",
     "for year in range(START_YEAR, END_YEAR):\n",
     "    for team, city in team_cities.items(): \n",
-    "        file = \"%s%s.csv\" % (team, year) \n",
+    "        file = '%s%s.csv' % (team, year) \n",
     "        try:\n",
     "            team_travel_data.append(pd.read_csv('TeamTravelDistVsWinning/%s' % file))\n",
     "        except FileNotFoundError: # not every team, city combination is a valid team \n",
@@ -292,7 +270,7 @@
    "source": [
     "# Save complete_data as a csv \n",
     "\n",
-    "complete_data.to_csv(\"CompleteData/completedata.csv\")"
+    "complete_data.to_csv('CompleteData/completedata.csv')"
    ]
   }
  ],
