updated README with much more structure and information, added an explanation to the analysis and visualization section

--- a/analysis and visualizations.ipynb
+++ b/analysis and visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The initial goal for this section was to see how both the length of a road trip and cumulative distance correlate with winning. However,  working with cumulative distance turned out to be troublesome. Road trip length is measured in number of games, which is discrete; distance traveled is measured in kilometers, which is continuous. When I tested the statistical significance of my findings, I first used a chi-squared test and then decided to use a difference of proportions test. Both of these tests require that the data is broken into discrete chunks, which naturally lends itself to a discrete dependent variable. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -236,8 +243,9 @@
        "9                   0  0.000000  "
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -268,21 +276,30 @@
     "\n",
     "wins_vs_roadtrip = pd.DataFrame.from_dict(data_dict) \n",
     "    \n",
-    "display(wins_vs_roadtrip) "
+    "wins_vs_roadtrip "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2461, 1231, 637, 327, 166, 70, 40] [2448, 1247, 648, 334, 152, 64, 36]\n",
-      "Power_divergenceResult(statistic=2.904181760741431, pvalue=0.8207734226301346)\n"
+      "[2461, 1231, 637, 327, 166, 70, 40] [2448, 1247, 648, 334, 152, 64, 36]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Power_divergenceResult(statistic=2.904181760741431, pvalue=0.8207734226301346)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -298,7 +315,7 @@
     "print(observed, expected)\n",
     "results = chisquare(observed, expected)\n",
     "\n",
-    "print(results) \n",
+    "results\n",
     "\n",
     "# According to this test, probably not \n",
     "# However, this was probably not the best test to use "
@@ -315,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -350,6 +367,7 @@
     "p2_games = wins_vs_roadtrip[wins_vs_roadtrip['nth game of road trip'] > 4]['sample size'].sum()\n",
     "\n",
     "z_value = diff_of_proportions_test(p2_wins, p2_games, p1_wins, p1_games)\n",
+    "\n",
     "print('z_value =', z_value)"
    ]
   },
