--- a/collecting and sorting data.ipynb
+++ b/collecting and sorting data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,8 @@
     "\n",
     "shortened_years = {\n",
     "    2012: 990, \n",
-    "    2013: 1229 \n",
+    "    2013: 1229, \n",
+    "    2020: 971\n",
     "}\n",
     "\n",
     "# create a list containing a dataframe for each season being studied, and cut off the post season \n",
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,15 +166,6 @@
      "output_type": "stream",
      "text": [
       "0.0% done\n",
-      "10.0% done\n",
-      "20.0% done\n",
-      "30.0% done\n",
-      "40.0% done\n",
-      "50.0% done\n",
-      "60.0% done\n",
-      "70.0% done\n",
-      "80.0% done\n",
-      "90.0% done\n",
       "100% done\n"
      ]
     }
@@ -196,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -213,24 +205,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    12020.000000\n",
-       "mean      2548.822463\n",
-       "std       1885.250738\n",
-       "min          8.000000\n",
-       "25%       1067.000000\n",
-       "50%       2051.000000\n",
-       "75%       3628.000000\n",
-       "max      13039.000000\n",
-       "Name: cumulative_distance, dtype: float64"
+       "count    14214.000000\n",
+       "mean         1.948572\n",
+       "std          1.261698\n",
+       "min          1.000000\n",
+       "25%          1.000000\n",
+       "50%          2.000000\n",
+       "75%          2.000000\n",
+       "max         10.000000\n",
+       "Name: n_game_road_trip, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,13 +250,13 @@
     "# reset indices \n",
     "complete_data.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "complete_data['cumulative_distance'].describe()\n",
-    "# complete_data['n_game_road_trip'].describe()\n"
+    "# complete_data['cumulative_distance'].describe()\n",
+    "complete_data['n_game_road_trip'].describe()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
