added season by season analysis

--- a/collecting and sorting data.ipynb
+++ b/collecting and sorting data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "Name: n_game_road_trip, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,9 +235,11 @@
     "    for team, city in team_cities.items(): \n",
     "        file = '%s%s.csv' % (team, year) \n",
     "        try:\n",
-    "            team_travel_data.append(pd.read_csv('TeamTravelDistVsWinning/%s' % file))\n",
+    "            team_season = pd.read_csv('TeamTravelDistVsWinning/%s' % file)\n",
     "        except FileNotFoundError: # not every team, city combination is a valid team \n",
     "            continue \n",
+    "        team_season['season_end_year'] = [year for _ in range(team_season.shape[0])]\n",
+    "        team_travel_data.append(team_season)\n",
     "\n",
     "complete_data = pd.concat(team_travel_data)\n",
     "\n",
@@ -256,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
